--- a/content/4.machine_learning/1.Regression/02-Simple_linear_regression_from_scratch.ipynb
+++ b/content/4.machine_learning/1.Regression/02-Simple_linear_regression_from_scratch.ipynb
@@ -235,224 +235,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>YearsExperience</th>\n",
-       "      <th>1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>3.7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>3.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>4.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>4.5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>5.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>5.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>6.8</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>7.1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>7.9</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>8.2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>8.7</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>9.5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>9.6</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>10.3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>10.5</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "    YearsExperience  1\n",
-       "0               1.1  1\n",
-       "1               1.3  1\n",
-       "2               1.5  1\n",
-       "3               2.0  1\n",
-       "4               2.2  1\n",
-       "5               2.9  1\n",
-       "6               3.0  1\n",
-       "7               3.2  1\n",
-       "8               3.2  1\n",
-       "9               3.7  1\n",
-       "10              3.9  1\n",
-       "11              4.0  1\n",
-       "12              4.0  1\n",
-       "13              4.1  1\n",
-       "14              4.5  1\n",
-       "15              4.9  1\n",
-       "16              5.1  1\n",
-       "17              5.3  1\n",
-       "18              5.9  1\n",
-       "19              6.0  1\n",
-       "20              6.8  1\n",
-       "21              7.1  1\n",
-       "22              7.9  1\n",
-       "23              8.2  1\n",
-       "24              8.7  1\n",
-       "25              9.0  1\n",
-       "26              9.5  1\n",
-       "27              9.6  1\n",
-       "28             10.3  1\n",
-       "29             10.5  1"
+       "0      39343\n",
+       "1      46205\n",
+       "2      37731\n",
+       "3      43525\n",
+       "4      39891\n",
+       "5      56642\n",
+       "6      60150\n",
+       "7      54445\n",
+       "8      64445\n",
+       "9      57189\n",
+       "10     63218\n",
+       "11     55794\n",
+       "12     56957\n",
+       "13     57081\n",
+       "14     61111\n",
+       "15     67938\n",
+       "16     66029\n",
+       "17     83088\n",
+       "18     81363\n",
+       "19     93940\n",
+       "20     91738\n",
+       "21     98273\n",
+       "22    101302\n",
+       "23    113812\n",
+       "24    109431\n",
+       "25    105582\n",
+       "26    116969\n",
+       "27    112635\n",
+       "28    122391\n",
+       "29    121872\n",
+       "Name: Salary, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,9 +285,10 @@
     "\n",
     "df = pd.read_csv(\"./data/salary_data.csv\")\n",
     "df[1] = 1\n",
-    "df = df.drop(columns=['Salary'])\n",
+    "X = df.drop(columns=['Salary'])\n",
     "theta = np.random.randint(10, size=(2))\n",
-    "df"
+    "y= df[\"Salary\"]\n",
+    "y\n"
    ]
   },
   {
@@ -477,46 +300,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0     13.7\n",
-       "1     15.1\n",
-       "2     16.5\n",
-       "3     20.0\n",
-       "4     21.4\n",
-       "5     26.3\n",
-       "6     27.0\n",
-       "7     28.4\n",
-       "8     28.4\n",
-       "9     31.9\n",
-       "10    33.3\n",
-       "11    34.0\n",
-       "12    34.0\n",
-       "13    34.7\n",
-       "14    37.5\n",
-       "15    40.3\n",
-       "16    41.7\n",
-       "17    43.1\n",
-       "18    47.3\n",
-       "19    48.0\n",
-       "20    53.6\n",
-       "21    55.7\n",
-       "22    61.3\n",
-       "23    63.4\n",
-       "24    66.9\n",
-       "25    69.0\n",
-       "26    72.5\n",
-       "27    73.2\n",
-       "28    78.1\n",
-       "29    79.5\n",
-       "Name: YearsExperience, dtype: float64"
+       "0      39343\n",
+       "1      46205\n",
+       "2      37731\n",
+       "3      43525\n",
+       "4      39891\n",
+       "5      56642\n",
+       "6      60150\n",
+       "7      54445\n",
+       "8      64445\n",
+       "9      57189\n",
+       "10     63218\n",
+       "11     55794\n",
+       "12     56957\n",
+       "13     57081\n",
+       "14     61111\n",
+       "15     67938\n",
+       "16     66029\n",
+       "17     83088\n",
+       "18     81363\n",
+       "19     93940\n",
+       "20     91738\n",
+       "21     98273\n",
+       "22    101302\n",
+       "23    113812\n",
+       "24    109431\n",
+       "25    105582\n",
+       "26    116969\n",
+       "27    112635\n",
+       "28    122391\n",
+       "29    121872\n",
+       "Name: Salary, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,32 +352,33 @@
     "a = theta[0]\n",
     "b = theta[1]\n",
     "\n",
-    "y = a * X + b\n",
-    "y\n",
     "\n",
     "# model function\n",
-    "def grad(X, y, theta):\n",
-    "    m = len(y)\n",
-    "    return 1/m * X.T.dot(model(X, theta) - y)\n",
+    "def model(X, a, b):\n",
+    "    y = a * X + b\n",
     "\n",
+    "model(X, a, b)\n",
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# define independent and dependent variables\n",
-    "t = data.index.values\n",
-    "y = data.values\n",
-    "\n",
-    "# setup the model\n",
-    "rate_model = Model(rate)\n",
-    "\n",
-    "# setup parameters\n",
-    "parameters = rate_model.make_params()\n",
-    "parameters.add('a', value=200)\n",
-    "parameters.add('k', value=0.5)\n",
-    "parameters._asteval.symtable['t'] = t\n",
-    "parameters.add('c1', expr='0 if t < 7 else 1')\n",
-    "parameters.add('c2', expr='0 if t < 14 else 1')\n",
-    "\n",
-    "# fit model to data\n",
-    "fit_result = rate_model.fit(y, parameters, x=t)"
+    "np.random.seed(0) # pour toujours reproduire le meme dataset\n",
+    " \n",
+    "n_samples = 100 # nombre d'echantillons a générer\n",
+    "x = np.linspace(0, 10, n_samples).reshape((n_samples, 1))\n",
+    "y = x + np.random.randn(n_samples, 1)\n",
+    " \n",
+    " \n",
+    "plt.scatter(x, y) # afficher les résultats. X en abscisse et y en ordonnée\n",
+    "plt.show()"
    ]
   },
   {
