--- a/content/4.machine_learning/1.Regression/03-Multiple_linear_regression.ipynb
+++ b/content/4.machine_learning/1.Regression/03-Multiple_linear_regression.ipynb
@@ -26,16 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv('./data/data_multi.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +155,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +175,7 @@
        "(100, 3)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,10 +201,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = (df[\"x_1\"], df[\"x_2\"])\n",
+    "y = (df[\"y\"])\n",
+    "type(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -747,9 +764,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "NLP",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -761,7 +778,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "098abfbdda89cc068fc5a24c70b28519776b65016448753c248b3e3ae6b6b2c3"
+   }
   }
  },
  "nbformat": 4,
