--- a/content/5.deployment/1.Flask/2.How_to_flask 2.ipynb
+++ b/content/5.deployment/1.Flask/2.How_to_flask 2.ipynb
@@ -113,12 +113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [18/Jul/2022 09:18:02] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/Jul/2022 09:18:02] \"\u001b[33mGET /apple-touch-icon-precomposed.png HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [18/Jul/2022 09:18:02] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [18/Jul/2022 09:18:03] \"\u001b[33mGET /apple-touch-icon.png HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [18/Jul/2022 09:21:48] \"GET / HTTP/1.1\" 200 -\n"
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -158,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -176,9 +171,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [18/Jul/2022 09:23:52] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [18/Jul/2022 09:23:54] \"GET / HTTP/1.1\" 200 -\n"
+      " * Running on http://127.0.0.1:5000 (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -251,48 +244,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1219478013.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [5]\u001b[0;36m\u001b[0m\n\u001b[0;31m    If user enters a valid input:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "#**Input:**\n",
-    "json\n",
-    "{\n",
-    "    \"salary\": 2500,\n",
-    "    \"bonus\": 200,\n",
-    "    \"taxes\": 400\n",
-    "}\n",
-    "\n",
-    "\n",
-    "#**Outputs:**\n",
-    "\n",
-    "If user enters a valid input:\n",
-    "json\n",
-    "{\n",
-    "    \"result\": 2300 // salary + bonus - taxes\n",
-    "}\n",
-    "\n",
-    "If user enters a string:\n",
-    "json\n",
-    "{\n",
-    "    \"error\": \"expected numbers, got strings.\"\n",
-    "}\n",
-    "\n",
-    "If user forgets a field:\n",
-    "json\n",
-    "{\n",
-    "    \"error\": f\"3 fields expected (salary, bonus, taxes). You forgot: {FIELD_THE_USER_FORGOT_HERE}.\"\n",
-    "}"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
