--- a/content/5.deployment/3.Database/01.SQL/3.drill_sql_alchemy 2.ipynb
+++ b/content/5.deployment/3.Database/01.SQL/3.drill_sql_alchemy 2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "XXUNjQ0jiy65"
    },
@@ -92,14 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "lT1hwcOpP8IY"
    },
    "outputs": [],
-   "source": [
-    "engine = create_engine('sqlite:///content/data.db')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -122,16 +120,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "jMvofMmmP_7D"
    },
    "outputs": [],
-   "source": [
-    "from sqlalchemy.orm import registry\n",
-    "mapper_registry = registry()\n",
-    "Base = mapper_registry.generate_base()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -145,14 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "Myb-10BVQHl9"
    },
    "outputs": [],
-   "source": [
-    "Maker = sessionmaker()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -166,26 +158,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "id": "q86kcOp0QtgG"
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'Engine' object has no attribute 'bind'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/Jorg/BeCode/Theano-4/content/5.deployment/3.Database/01.SQL/3.drill_sql_alchemy.ipynb Cell 16\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/Jorg/BeCode/Theano-4/content/5.deployment/3.Database/01.SQL/3.drill_sql_alchemy.ipynb#ch0000015?line=0'>1</a>\u001b[0m session \u001b[39m=\u001b[39m engine\u001b[39m.\u001b[39;49mbind(Maker)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Engine' object has no attribute 'bind'"
-     ]
-    }
-   ],
-   "source": [
-    "session = Maker.bind(engine)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -484,26 +462,18 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
+    "name": "ipython"
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
-   }
+   "nbconvert_exporter": "python"
   }
  },
  "nbformat": 4,
